--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -20,9 +20,9 @@ jobs:
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_LANGUAGE: "False"
           SHOW_OS: "False"
-          SHOW_PROJECTS: "True"
+          SHOW_PROJECTS: "False"
           SHOW_TIMEZONE: "False"
           SHOW_EDITORS: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_LOC_CHART: "True"
+          SHOW_LOC_CHART: "False"
