--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -3,7 +3,7 @@ name: Statistics
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
@@ -20,7 +20,7 @@ jobs:
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_LANGUAGE: "False"
           SHOW_OS: "False"
-          SHOW_PROJECTS: "False"
+          SHOW_PROJECTS: "True"
           SHOW_TIMEZONE: "False"
           SHOW_EDITORS: "False"
           SHOW_SHORT_INFO: "False"
