--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -16,7 +16,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_LINES_OF_CODE: "True"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_COMMIT: "True"
+          SHOW_COMMIT: "False"
           SHOW_DAYS_OF_WEEK: "False"
           SHOW_LANGUAGE: "False"
           SHOW_OS: "False"
