--- a/.github/workflows/statistics.yml
+++ b/.github/workflows/statistics.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - .github/workflows/
+      - .github/workflows/**
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
